--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mdxh/vee-validate",
-  "version": "0.0.1gdfd",
+  "version": "0.0.1",
   "private": false,
   "author": "DEVxHUB",
   "description": "Install vee-validate to vue3 using dxh wrapper",
@@ -19,8 +19,12 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write src/"
   },
-  "peerDependencies": {},
+  "peerDependencies": {
+    "vue": "^3.0.1"
+  },
   "dependencies": {
+    "@vee-validate/rules": "^4.13.2",
+    "vee-validate": "^4.13.2",
     "vue": "^3.4.29"
   },
   "devDependencies": {
